# HandicapLab

./: .gitignore  ADR_INDEX.md  AGENTS.md  ARCHITECTURE_DECISIONS.md  ARCHITECTURE_INVARIANTS.md  CALIBRATION_DIAGNOSTIC.md  CLAIMS_POLICY.md  DATA_PROVIDER_TEST.md  DEPENDENCY_AUDIT_REPORT.md  ENGINEERING_PRINCIPLES.md  EPIC_35_IMPLEMENTATION.md  EPIC_36_IMPLEMENTATION.md  EPIC_37_IMPLEMENTATION.md  EPIC_38_IMPLEMENTATION.md  EPIC_39_IMPLEMENTATION.md  EPIC_40_IMPLEMENTATION.md  FINAL_PIPELINE_STATUS.md  FINAL_PRODUCTION_STATUS.md  GOVERNANCE_AUDIT_REPORT.md  HT_DECOMPOSITION_REPORT.md  INCIDENT_POLICY.md  LIVE_READINESS_REPORT.md  MASTER_EXECUTION_PROMPT.md  MILESTONE_M1.md  MODEL_COMPARISON.md  MODEL_READINESS.md  NEXT_MODEL_ITERATION.md  PRODUCTION_ACTIVATION_REPORT.md  PRODUCTION_LIVE_STATUS.md  PRODUCTION_PIPELINE_STATUS.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READY.md  PRODUCTION_STATUS.md  PROVIDER_ARCHITECTURE.md  README.md  REAL_DATA_VALIDATION.md  RESEARCH_BACKLOG.md  RESEARCH_MANIFEST.md  RESEARCH_READINESS_GATE.md  ROADMAP_PHASE_2.md  (+67 more)
research/quant/: duckdb_loader.py  exp_000_baseline.py  manifest.json  mlflow.db  pyproject.toml  research_ledger.jsonl
research/quant/benchmark/: RESEARCH_AUDIT_REPORT.md  audit_generator.py  run_experiment.py
research/quant/calibration/: beta.py  factory.py
research/quant/data/: coverage.py  dqs_engine.py  duckdb_loader.py  feature_validator.py  lake.py
research/quant/docs/: BENCHMARK_DASHBOARD.md  EXPERIMENT_REGISTRY.yaml  FEATURE_MANIFEST.md  MODEL_GOVERNANCE.md
research/quant/evaluation/: metrics.py  (+1 more)
(+2228 files in other folders)
