[project]
name = "quant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=4.4.0",
    "duckdb>=1.5.4",
    "hypothesis>=6.156.1",
    "lightgbm>=4.6.0",
    "mlflow>=3.14.0",
    "mutmut>=3.6.0",
    "networkx>=3.6.1",
    "numpy>=2.5.1",
    "optuna>=4.9.0",
    "pandas>=2.3.3",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.5",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "statsmodels>=0.14.6",
    "tabulate>=0.10.0",
    "xgboost>=3.3.0",
]
